fix some errors

--- a/project-2/chess.html
+++ b/project-2/chess.html
@@ -27,6 +27,7 @@
       padding: 10px;
       display: block;
       text-align: center;
+      
     }
 
     .nav a:hover {
@@ -46,9 +47,9 @@
 <body>
   <nav class="nav">
     <ul>
-      <li><a href="/index.html">FORM</a></li>
-      <li><a href="/chess.html">CHESS</a></li>
-      <li><a href="/preodictable.html">PERIODIC TABLE</a></li>
+      <li><a href="index.html">FORM</a></li>
+      <li><a href="chess.html">CHESS</a></li>
+      <li><a href="preodictable.html">PERIODIC TABLE</a></li>
     </ul>
   </nav>
   <h1>CHESS BOARD</h1>
@@ -58,7 +59,7 @@
   <table class="box" border="1" style="
       border-collapse: collapse;">
     <tr>
-      <td style="color: #56a059;"><b>1</b> <img src="/blackrook.png" alt="">
+      <td style="color: #56a059;"><b>1</b> <img src="blackrook.png" alt="">
       </td>
       <td style="background-color: #56a059;"> <img
           src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png" alt="">
