--- a/project-2/index.html
+++ b/project-2/index.html
@@ -18,9 +18,11 @@
   padding: 10px;
   display: block;
   text-align: center;
+  
 }
 .nav a:hover{
   background-color: rgb(41, 41, 41);
+  
 }
 .nav li{
   float: left;
@@ -37,9 +39,9 @@ body{
 <body>
     <nav class="nav">
         <ul>
-            <li><a href="/index.html">FORM</a></li>
-            <li><a href="/chess.html">CHESS</a></li>
-            <li><a href="/preodictable.html">PERIODIC TABLE</a></li>
+            <li><a href="index.html">FORM</a></li>
+            <li><a href="chess.html">CHESS</a></li>
+            <li><a href="preodictable.html">PERIODIC TABLE</a></li>
         </ul>
     </nav>
 
