--- a/project-2/preodictable.html
+++ b/project-2/preodictable.html
@@ -56,6 +56,7 @@
   padding: 10px;
   display: block;
   text-align: center;
+  
 }
 .nav a:hover{
   background-color: rgb(41, 41, 41);
@@ -73,9 +74,9 @@
 <body>
   <nav class="nav">
     <ul>
-      <li><a  href="/index.html">FORM</a></li>
-      <li><a  href="/chess.html">CHESS</a></li>
-      <li><a  href="/preodictable.html">PERIODIC TABLE</a></li>
+      <li><a  href="index.html">FORM</a></li>
+      <li><a  href="chess.html">CHESS</a></li>
+      <li><a  href="preodictable.html">PERIODIC TABLE</a></li>
     </ul>
   </nav>
  
